#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([rcmd], [0.1], [jozef@purpakana.com])
AC_CONFIG_SRCDIR([src/rcmd.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h unistd.h pthread.h libssh/libssh.h libssh/callbacks.h])


# Checks for library functions.

AC_OUTPUT
